--- a/rabbitmq/dockerfile
+++ b/rabbitmq/dockerfile
@@ -1,2 +1,6 @@
 FROM rabbitmq
-RUN rabbitmq-plugins enable --offline rabbitmq_mqtt rabbitmq_federation_management
+
+COPY init.sh .
+RUN chmod +x /init.sh
+
+CMD ["./init.sh"]
