updated compose and added to ignore

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -20,11 +20,10 @@ services:
       - PIMVIEW_RABBITMQ_MQTT_USER=${PIMVIEW_RABBITMQ_MQTT_USER}
       - PIMVIEW_RABBITMQ_MQTT_PASSWORD=${PIMVIEW_RABBITMQ_MQTT_PASSWORD}
 
-  pimview-frontend:
-    container_name: pimview-frontend
-    build: https://github.com/blambo10/pimview-frontend.git#main
+  pimview-frontend-core:
+    container_name: pimview-frontend-core
+    build: https://github.com/blambo10/pimview-frontend-core.git#main
     restart: always
-
     ports:
       - 3000:3000
     depends_on:
@@ -38,8 +37,8 @@ services:
     networks:
       - pimview-network
     
-  pimview-denonavr:
-    build: https://github.com/blambo10/pimview-denonavr-service.git#main
+  pimview-denonavr-sub:
+    build: https://github.com/blambo10/pimview-denonavr-service.git#main:backend
     restart: always
     depends_on:
       - rabbitmq
@@ -47,11 +46,13 @@ services:
       - MQTT_BROKER_ADDRESS=${PIMVIEW_MQTT_BROKER_ADDRESS}
       - MQTT_BROKER_USERNAME=${PIMVIEW_RABBITMQ_MQTT_USER}
       - MQTT_BROKER_PASSWORD=${PIMVIEW_RABBITMQ_MQTT_PASSWORD}
+      - DEVICE_ADDRESS=${PIMVIEW_MARANTZ_DEVICE_ADDRESS}
+      - DEVICE_PORT=${PIMVIEW_MARANTZ_DEVICE_PORT}
     networks:
       - pimview-network
     
-  pimview-lg:
-    build: https://github.com/blambo10/pimview-lg-service.git#main
+  pimview-denonavr-pub:
+    build: https://github.com/blambo10/pimview-denonavr-service.git#main:backend
     restart: always
     depends_on:
       - rabbitmq
@@ -59,9 +60,40 @@ services:
       - MQTT_BROKER_ADDRESS=${PIMVIEW_MQTT_BROKER_ADDRESS}
       - MQTT_BROKER_USERNAME=${PIMVIEW_RABBITMQ_MQTT_USER}
       - MQTT_BROKER_PASSWORD=${PIMVIEW_RABBITMQ_MQTT_PASSWORD}
-      - WEB_OS_ADDRESS=192.168.1.36
+      - DEVICE_ADDRESS=${PIMVIEW_MARANTZ_DEVICE_ADDRESS}
+      - DEVICE_PORT=${PIMVIEW_MARANTZ_DEVICE_PORT}
+      - RUN_PUBLISHER=true
     networks:
       - pimview-network
+          
+  pimview-denonavr-frontend-module:
+    build: https://github.com/blambo10/pimview-denonavr-service.git#main:frontend
+    restart: always
+    ports:
+      - 3001:3001
+    depends_on:
+      - rabbitmq
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+      - REACT_APP_PIMVIEW_RABBITMQ_MQTT_ADDRESS=${PIMVIEW_EXTERNAL_MQTT_BROKER_ADDRESS}
+      - REACT_APP_PIMVIEW_RABBITMQ_MQTT_USER=${PIMVIEW_RABBITMQ_MQTT_USER}
+      - REACT_APP_PIMVIEW_RABBITMQ_MQTT_PASSWORD=${PIMVIEW_RABBITMQ_MQTT_PASSWORD}
+      - REACT_APP_PIMVIEW_RABBITMQ_MQTT_PORT=${PIMVIEW_RABBITMQ_MQTT_PORT}
+    networks:
+      - pimview-network
+
+  # pimview-lg:
+  #   build: https://github.com/blambo10/pimview-lg-service.git#main
+  #   restart: always
+  #   depends_on:
+  #     - rabbitmq
+  #   environment:
+  #     - MQTT_BROKER_ADDRESS=${PIMVIEW_MQTT_BROKER_ADDRESS}
+  #     - MQTT_BROKER_USERNAME=${PIMVIEW_RABBITMQ_MQTT_USER}
+  #     - MQTT_BROKER_PASSWORD=${PIMVIEW_RABBITMQ_MQTT_PASSWORD}
+  #     - WEB_OS_ADDRESS=192.168.1.36
+  #   networks:
+  #     - pimview-network
 
 networks:
   pimview-network:
