updated front end core

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,11 +45,7 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
       - NODE_ENV=production
-      - REACT_APP_PIMVIEW_DEVICE_URL=${REACT_APP_PIMVIEW_DEVICE_URL}
-      - REACT_APP_PIMVIEW_RABBITMQ_MQTT_ADDRESS=${PIMVIEW_EXTERNAL_MQTT_BROKER_ADDRESS}
-      - REACT_APP_PIMVIEW_RABBITMQ_MQTT_USER=${PIMVIEW_RABBITMQ_MQTT_USER}
-      - REACT_APP_PIMVIEW_RABBITMQ_MQTT_PASSWORD=${PIMVIEW_RABBITMQ_MQTT_PASSWORD}
-      - REACT_APP_PIMVIEW_RABBITMQ_MQTT_PORT=${PIMVIEW_RABBITMQ_MQTT_PORT}
+      - REACT_APP_PIMVIEW_DEVICE_URL=${PIMVIEW_DEVICE_URL}
     networks:
       - pimview-network
     
