--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -45,7 +45,7 @@ services:
     environment:
       - CHOKIDAR_USEPOLLING=true
       - NODE_ENV=production
-      - REACT_APP_PIMVIEW_DEVICE_URL=${PIMVIEW_DEVICE_URL}
+      - REACT_APP_PIMVIEW_DEVICE_URL=${REACT_APP_PIMVIEW_DEVICE_URL}
     networks:
       - pimview-network
     
